--- a/FixStep/views/index.pug
+++ b/FixStep/views/index.pug
@@ -2,14 +2,10 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    script(src='http://code.jquery.com/jquery-3.1.1.min.js')
+    script(src='js/iframe_api.js')
     link(rel='stylesheet', href='css/main.css')
-    title  FixStep
+    title FixStep
   body
     h2 Synchronize all your music in one place.
-    #container
-      iframe#video(width='800', height='500')
-    script(type='text/javascript').
-      var url = !{JSON.stringify(url)}
-      var time = !{JSON.stringify(time)}
+    div(id='player')
     script(type='text/javascript', src='js/main.js')
