Add autoplay and hide controls

--- a/FixStep/views/index.pug
+++ b/FixStep/views/index.pug
@@ -8,4 +8,5 @@ html
   body
     h2 Synchronize all your music in one place.
     div(id='player')
+    iframe(id="iframe_player" frameborder="0" style="border: solid 4px #37474F")
     script(type='text/javascript', src='js/main.js')
