--- a/CSS_Animations/main.css
+++ b/CSS_Animations/main.css
@@ -8,7 +8,7 @@ body>div {
     width: 483px;
     height: 298px;
     background: #676470;
-    transition: all 0.4s ease;
+    transition: all .4s ease;
 }
 
 .fade {
@@ -26,7 +26,15 @@ body>button {
 }
 
 .grow:hover {
+    transition: all 0.15s ease;
     -webkit-transform: scale(1.5);
     -ms-transform: scale(1.5);
     transform: scale(1.5);
+}
+
+.grow {
+    transition: all 0.15s ease;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
 }
