--- a/CSS_Animations/main.css
+++ b/CSS_Animations/main.css
@@ -1,5 +1,7 @@
 body {
-    font-family: 'Roboto' 1.5em;
+    font-family: 'Roboto';
+    font-size: 1.5em;
+    color: white;
     padding: 4em;
 }
 
@@ -19,10 +21,12 @@ body>div {
     opacity: 1;
 }
 
-body>button {
+button {
     width: 5em;
     height: 2em;
     transition: all 0.4s ease;
+    border-radius: .5em;
+    border: .2em solid black;
 }
 
 .grow:hover {
@@ -37,4 +41,11 @@ body>button {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1);
+}
+
+button {
+    /*remove default browser styles*/
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    /*****************************/
 }
